--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
       // ==========================
       // Cấu hình API & Auth
       // ==========================
-      const API_BASE = "http://127.0.0.1:8000"; // đổi khi deploy
+      const API_BASE = "https://acc-ls6r.onrender.com"; // đổi khi deploy
       const TOKEN_KEY = "av_token";
       const OTP_PERIOD = 180; // Garena 180s
 
